feat: add description about interval learning

--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -12,14 +12,14 @@
   <header class="header">
   </header>
   <main class="main">
-    <div class="promo-container">
-      <div class="promo-container__section">
+    <div class="promo-container ">
+      <div class="promo-container__section wrapper">
         <div class="promo-container__content">
           <h2 class="promo-container__title white-color">RS Lang</h2>
           <div class="promo-container__description">
             <p>
               Английский – это не просто язык, это образ жизни. И для того, чтобы начать жить «английским»
-              попробуй наше приложение RS Lang и... <br>Learn English with us in a funny way!
+              попробуй наше приложение RS Lang и... Learn English with us in a funny way!
             </p>
           </div>
           <div class="promo-container__video">
@@ -46,6 +46,69 @@
             </p>
           </div>
         </div>
+        <section class="promo-container__content rules">
+          <h2 class="promo-container__title white-color">Наша методика интервального повторения</h2>
+          <div class="promo-container__description">
+            <p>
+              Наше приложение предоставляет пользователям большое количество настроек, благодаря которым пользователь
+              может организовать свой режим обучения в соответствии с собственными предпочтениями. В то же время
+              ключевым элементом, определяющим насколько эффективным и полезным окажется изучение новых слов, является
+              наша методика интервального повторения.
+            </p>
+            <p>
+              При первом знакомстве со словом, у пользователя есть возможность самому определить степень сложности:
+            </p>
+            <p>
+              - добавить слово в категорию изученных слов (с которой можно ознакомиться в словаре пользователя на
+              вкладке "REMOVED") нажав на одну из кнопок "I KNOW", "EASY" либо без ошибок введя слово и
+              нажав кнопку "CHECK". В данном случае данное слово не будет повторно предлагаться пользователю для
+              изучения.
+            </p>
+            <p>
+              - добавить слово в категорию сложных для изучения слов (с которой можно ознакомиться в словаре
+              пользователя на вкладке "DIFFICULT"), нажав на одну из кнопок "DIFFICULT WORD", "DIFFICULT". В данном
+              случае данное слово будет повторно предлагаться пользователю для изучения при выборе в
+              настройках пользователя режима обучения "DIFFICULT".
+            </p>
+            <p>
+              - добавить слово в категорию слов для интервального изучения (с которой можно ознакомиться в словаре
+              пользователя на вкладке "LEARNING"), нажав на одну из кнопок "SHOW ANSWER", "NORMAL", "REPEAT AGAIN" либо
+              допустив ошибку
+              при вводе слова. В данном случае данное слово будет повторно предлагаться пользователю для изучения при
+              выборе в настройках пользователя одного из режимов обучения "REPEAT", "MIXED", в порядке очереди один раз
+              за тренировку (каждое слово можно дополнительно повторить на текущей тренировке нажав кнопку "REPEAT
+              AGAIN").
+              Изменить категорию слова пользователь может с помощью вышеописанных кнопок либо три раза подряд в течении
+              трех тренировок правильно введя слово. Если будет допущена ошибка, количество режим повтора данного слова
+              снова будет
+              увеличен до трех.
+            </p>
+            <p class="promo-container__finish-text">
+              Также изменить категорию слова пользователь можен с помощью возможностей словаря.
+            </p>
+
+          </div>
+        </section>
+        <section class="promo-container__content functionality">
+          <h2 class="promo-container__title white-color">Дополнительный функционал</h2>
+          <div class="promo-container__description">
+            <p>
+              В нашем приложении реализован следующий дополнительный функционал:
+            </p>
+            <p>
+              - подключен Firebase, через который на данный момент проходит аутентификация пользователя и где хранится
+              email, password, username пользователей. В планах нашей команды была реализация опции восстановления
+              пароля и возможности загрузки личных аватарок.
+            </p>
+            <img class="promo-container__image functionality__image" src="/src/assets/images/db.png" alt="Firebase">
+            <p>
+              - предусмотрена возможность включения/отключения автоматической смены карточек в режиме тренировки
+            </p>
+            <p>
+              - режим отслеживания выполнения дневной цели
+            </p>
+          </div>
+        </section>
         <div class="promo-container__content structure">
           <h2 class="promo-container__title white-color">Структура приложения</h2>
           <div class="promo-container__description">
@@ -65,8 +128,9 @@
               – Главная страница приложения
             </p>
             <img class="promo-container__image screen" src="/src/assets/images/main-promo.png" alt="Main">
-            <p>На главной странице вы видите краткую информации о вашей ежедневой цели и достижениях. В конце каждой
-              тренировки достижения будут меняться, так что следите внимательно, чтобы порадоваться своим успехам.</p>
+            <p>
+              На главной странице вы видите краткую информации о вашей ежедневой цели и достижениях. В конце каждой
+              тренировки достижения будут меняться, так что следите внимательно, чтобы порадоваться своим успехам.
             </p>
             <p>
               – Настройки приложения
