feat: add description about routing

--- a/src/pages/promo.html
+++ b/src/pages/promo.html
@@ -105,6 +105,9 @@
               - предусмотрена возможность включения/отключения автоматической смены карточек в режиме тренировки
             </p>
             <p>
+              - основная часть приложения реализована как SPA, для удобной навигации реализован роутинг
+            </p>
+            <p>
               - режим отслеживания выполнения дневной цели
             </p>
           </div>
